feat: complete exercise

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
             Inseriamo in pagina l’immagine della lampadina spenta che trovate in allegato e accanto un bottone con la scritta “Accendi”. <br>
             Al click del bottone, la lampadina dovrà accendersi (dovremo quindi utilizzare l’immagine della lampadina accesa, sempre in allegato).
         </p>
+        <div class="grid">
+            <img id="lamp-img" src="./img/white_lamp.png" alt="Foto lampadina spenta">
+            <button id="lamp-btn">Accendi</button>
+        </div>
     </div>
-
 
     <script src="./js/script.js"></script>
 </body>
