feat: complete bonus part

--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
     <h1 class="title">**Primi passi col DOM**</h1>
     <div class="container">
         <p>
-            Inseriamo in pagina l’immagine della lampadina spenta che trovate in allegato e accanto un bottone con la scritta “Accendi”. <br>
-            Al click del bottone, la lampadina dovrà accendersi (dovremo quindi utilizzare l’immagine della lampadina accesa, sempre in allegato).
+            Inseriamo in pagina l’immagine della lampadina spenta che trovate in allegato e accanto un bottone con la
+            scritta “Accendi”. <br>
+            Al click del bottone, la lampadina dovrà accendersi (dovremo quindi utilizzare l’immagine della lampadina
+            accesa, sempre in allegato). <br>
+            **BONUS** <br>
+            Facciamo accendi e spegni: <br>
+            - Al primo click la lampadina si accende e nel bottone compare la scritta "Spegni" <br>
+            - Al secondo click la lampadina si spegne e nel bottone compare la scritta "Accendi" <br>
+            - E così via...
         </p>
         <div class="grid">
             <img id="lamp-img" src="./img/white_lamp.png" alt="Foto lampadina spenta">
